fixed alignment issue on mobile

--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@
 body {
   font-family: "Barlow Semi Condensed", serif;
   font-style: normal;
+  font-size: 13px;
+  line-height: 1.5;
 }
 .container {
   display: grid;
-  width: 65%;
-  margin: 160px auto;
+  max-width: 1440px;
+  margin: 100px auto;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 30px;
@@ -55,8 +57,6 @@ img {
   color: #fff;
   box-shadow: 0px 0px 10px 2px rgba(48, 10, 10, 0.251);
   border: none;
-  font-size: 13px;
-  line-height: 1.4;
   font-weight: 500;
 }
 .card-1 {
